--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ joblib==1.1.0
 lxml==4.6.4
 nltk==3.6.5
 numpy==1.21.4
+oauthlib==3.1.1
 outcome==1.1.0
 pandas==1.3.4
 pycparser==2.21
@@ -23,14 +24,20 @@ python-dateutil==2.8.2
 pytz==2021.3
 regex==2021.11.10
 requests==2.26.0
+requests-oauthlib==1.3.0
+scikit-learn==1.0.2
+scipy==1.7.3
 selenium==4.1.0
 six==1.16.0
+sklearn==0.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.1
+threadpoolctl==3.0.0
 tqdm==4.62.3
 trio==0.19.0
 trio-websocket==0.9.2
+tweepy==4.4.0
 typing_extensions==4.0.1
 urllib3==1.26.7
 webkit-server==1.0
