--- a/requirements.txt
+++ b/requirements.txt
@@ -7,19 +7,26 @@ cffi==1.15.0
 charset-normalizer==2.0.8
 click==8.0.3
 cryptography==36.0.0
+cycler==0.11.0
 dryscrape==1.0
+fonttools==4.29.1
 h11==0.12.0
 idna==3.3
 importlib-metadata==4.8.2
 joblib==1.1.0
+kiwisolver==1.3.2
 lxml==4.6.4
+matplotlib==3.5.1
 nltk==3.6.5
 numpy==1.21.4
 oauthlib==3.1.1
 outcome==1.1.0
+packaging==21.3
 pandas==1.3.4
+Pillow==9.0.1
 pycparser==2.21
 pyOpenSSL==21.0.0
+pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
 regex==2021.11.10
@@ -33,6 +40,7 @@ sklearn==0.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.1
+tabulate==0.8.9
 threadpoolctl==3.0.0
 tqdm==4.62.3
 trio==0.19.0
