--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ requests==2.26.0
 requests-oauthlib==1.3.0
 scikit-learn==1.0.2
 scipy==1.7.3
+seaborn==0.11.2
 selenium==4.1.0
 six==1.16.0
 sklearn==0.0
