--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ oauthlib==3.1.1
 outcome==1.1.0
 packaging==21.3
 pandas==1.3.4
+patsy==0.5.2
 Pillow==9.0.1
 pycparser==2.21
 pyOpenSSL==21.0.0
@@ -41,6 +42,7 @@ sklearn==0.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.1
+statsmodels==0.13.2
 tabulate==0.8.9
 threadpoolctl==3.0.0
 tqdm==4.62.3
